# mara_examples

./: README.md
gripper_minimal_service/: CMakeLists.txt  package.xml
gripper_minimal_service/scripts/: gripper_minimal_client.py  gripper_minimal_client_v1.py  gripper_minimal_client_v2.py
gripper_minimal_service/src/: gripper_minimal_client.cpp  gripper_minimal_client_v1.cpp  gripper_minimal_client_v2.cpp
gripper_minimal_subscriber/: CMakeLists.txt  README.md  package.xml
gripper_minimal_subscriber/src/: gripper_minimal_subscriber.cpp
mara_minimal_publisher/: CMakeLists.txt  package.xml
mara_minimal_publisher/scripts/: mara_minimal_publisher.py  mara_minimal_publisher_v1.py  mara_minimal_publisher_v2.py
mara_minimal_publisher/src/: mara_minimal_publisher.cpp  mara_minimal_publisher_v1.cpp  mara_minimal_publisher_v2.cpp
mara_minimal_subscriber/: CMakeLists.txt  package.xml
mara_minimal_subscriber/scripts/: mara_minimal_subscriber.py  mara_minimal_subscriber_v1.py  mara_minimal_subscriber_v2.py
mara_minimal_subscriber/src/: mara_minimal_subscriber.cpp  mara_minimal_subscriber_v1.cpp  mara_minimal_subscriber_v2.cpp
mara_minimal_trajectory_action/: CMakeLists.txt  README.md  package.xml
mara_minimal_trajectory_action/src/: mara_minimal_trajectory_action.cpp
