<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mara_minimal_trajectory_action</name>
  <version>0.0.1</version>
  <description>MARA minimal trajectory action node</description>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernandez</maintainer>
  <license>Apache License 2.0</license>
  <author>Alejandro Hernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>hrim_actuator_rotaryservo_actions</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>hrim_actuator_rotaryservo_actions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
